Source/WebCore: [chromium] As of r98380, ThreadableLoaderClients are having their ResourceRequest::TargetType clobbered. They set their own type, but CachedResourceRequest (through which they now flow) sets a TargetType without bothering to see if one has already been set. https://bugs.webkit.org/show_bug.cgi?id=70972

Reviewed by Darin Fisher.

No new tests, this is chromium-specific and only affects
behavior seen in full builds of chromium.

* loader/cache/CachedResourceRequest.cpp:
(WebCore::CachedResourceRequest::load):Don't setTargetType()
    if the value is something other than the default already.
* platform/network/chromium/ResourceRequest.h: Change default
    TargetType to TargetIsUnspecified.

Source/WebKit/chromium: Add 2 new TargetTypes (to match ResourceRequest::TargetType)
and ensure we don't pass chromium a TargetType it doesn't
yet understand.
https://bugs.webkit.org/show_bug.cgi?id=70972

Reviewed by Darin Fisher.

* public/WebURLRequest.h:
* src/WebURLRequest.cpp:


Canonical link: https://commits.webkit.org/87615@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99015 268f45cc-cd09-0410-ab3c-d52691b4dbfc